--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,10 @@ build/Release
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+
+#Cloud9 IDE
+.c9
+
+#test configuration files
+test.json
+test.yml
