--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "email": "raceprouk@sockdrawer.io"
   },
   "main": "./Math.js",
-  "bin": "./node_modules/sockbot/lib/cli.js",
+  "bin": "./Math.js",
   "engines": {
     "node": ">=0.11",
     "iojs": ">=1.7"
