--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "sinon": "^1.15.1"
   },
   "scripts": {
-    "start": "node --harmony --harmony_arrow_functions node_modules/sockbot/lib/cli.js",
+    "start": "sockbot",
     "lint": "node --harmony --harmony_arrow_functions node_modules/gulp/bin/gulp.js lint",
     "test": "node --harmony --harmony_arrow_functions node_modules/gulp/bin/gulp.js test",
     "gulp": "node --harmony --harmony_arrow_functions node_modules/gulp/bin/gulp.js",
