--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sockbot-math",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Math plugin for SockDrawer's SockBot",
   "repository": "https://github.com/RaceProUK/SockBot-Math",
   "license": "MIT",
@@ -15,28 +15,28 @@
     "iojs": ">=1.7"
   },
   "dependencies": {
-    "mathjs": "^2.1.1",
+    "mathjs": "^3.1.3",
     "sockbot": "^2.0.0"
   },
   "devDependencies": {
-    "chai": "^3.2.0",
-    "coveralls": "^2.11.3",
-    "gulp": "^3.9.0",
-    "gulp-eslint": "^1.0.0",
-    "gulp-git": "^1.2.4",
-    "gulp-istanbul": "^0.10.0",
-    "gulp-jsdoc-to-markdown": "^1.1.1",
-    "gulp-mocha": "^2.1.3",
+    "chai": "^3.5.0",
+    "coveralls": "^2.11.9",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^2.0.0",
+    "gulp-git": "^1.7.0",
+    "gulp-istanbul": "^0.10.3",
+    "gulp-jsdoc-to-markdown": "^1.2.1",
+    "gulp-mocha": "^2.2.0",
     "gulp-rename": "^1.2.2",
-    "istanbul-harmony": "^0.3.16",
-    "sinon": "^1.15.1"
+    "istanbul": "^0.4.2",
+    "sinon": "^1.17.3"
   },
   "scripts": {
     "start": "sockbot",
     "lint": "node --harmony --harmony_arrow_functions node_modules/gulp/bin/gulp.js lint",
     "test": "node --harmony --harmony_arrow_functions node_modules/gulp/bin/gulp.js test",
     "gulp": "node --harmony --harmony_arrow_functions node_modules/gulp/bin/gulp.js",
-    "istanbul": "node --harmony --harmony_arrow_functions node_modules/istanbul-harmony/lib/cli.js cover node_modules/gulp-mocha/node_modules/mocha/bin/_mocha -- --recursive -R dot",
+    "istanbul": "node --harmony --harmony_arrow_functions node_modules/istanbul/lib/cli.js cover node_modules/gulp-mocha/node_modules/mocha/bin/_mocha -- --recursive -R dot",
     "mocha": "node --harmony --harmony_arrow_functions node_modules/gulp-mocha/node_modules/mocha/bin/_mocha --recursive -R spec"
   }
 }
